--- a/views/login.html
+++ b/views/login.html
@@ -18,7 +18,7 @@
         登录
       </h3>
     <form method="POST" action="/login">
-        <span style="color: #ff0000;"><input type="hidden" name="returnUrl" value="{{.Url}}"/></span>
+        <span style="color: #ff0000;"><input type="hidden" name="url" value="{{.Url}}"/></span>
       <div class="form-group">
         <label class="control-label" for="LoginForm-UserName">用户名 或 邮箱</label>
         <input id="uname" name="uname" type="text" value="" class="form-control" placeholder="Enter account" list="cars"></div>
@@ -87,17 +87,35 @@ function backToHome(){
 //禁用chrome和firefox浏览器自带的自动提示 
 $('#uname').attr("autocomplete","off"); 
 $(document).ready(function(){
-  // $("#uname").focus(function(){
-  // $("#uname").blur(function(){
-  // $("#uname").keydown(function(){用keydown不行，因为当按键放开后才传值
-  $("#uname").keyup(function(){   
-  // $(function(){
-            $.ajax({
+  $("#uname").keyup(function(event){
+    var uname1=document.getElementById("uname");
+    // alert(event.keyCode);
+   if (event.keyCode != 38 && event.keyCode != 40 && uname1.value.length==2){
+    $.ajax({
                 type:"post",//这里是否一定要用post？？？
                 url:"/regist/getuname",
                 data: { uname: $("#uname").val()},
                 dataType:'json',//dataType:JSON,这种是jquerylatest版本的表达方法。不支持新版jquery。
                 success:function(data,status){
+                  $(".option").remove();
+                  $.each(data,function(i,d){
+                      $("#cars").append('<option class="option" value="' + data[i].Username + '">' + data[i].Nickname + '</option>');
+                  });
+                }
+      });
+                // $("#uname").keydown(function(){
+                //   $("option").remove();
+                // }); 
+    }
+ });
+});   
+  // $("#uname").focus(function(){
+  // $("#uname").blur(function(){
+  // $("#uname").keydown(function(){用keydown不行，因为当按键放开后才传值
+  
+    
+  // $(function(){
+            
                 //控制器中用jsonserver的话就用下面这个形式，不用eval转换，如果用writestring方式，就要用eval转换。
                       // 方式一：this.Ctx.WriteString(string(b))
                       //document.write(data);
@@ -124,9 +142,7 @@ $(document).ready(function(){
                           // document.write(obj);
                          // var obj1=eval(obj) //再转成json对象？
                          // alert(obj1[0].Username);只有firefox支持
-                           $.each(data,function(i,d){
-                             $("#cars").append('<option value="' + data[i].Username + '"></option>');
-                            }); 
+                           
                            // for (i=0;i<=10;i++){取10个也不行
                            //  $("#cars").append('<option value="'+obj1[i].Username+'"></option>');
                            // }
@@ -175,15 +191,16 @@ $(document).ready(function(){
                           // document.write(mycars[x] + "<br />")
                           // }
                          // }
-                }
-            });
- });
- $("#uname").keydown(function(){
-  $("option").remove();
-  // $("#cars").append('<option value="' +  + '">' + + '</option>');
-    // $("ul").append("<li>"+ +"</li>");
-  });
-});
+
+// $('input').keydown(function(event){ 
+   // alert(event.keyCode); 
+ // });
+// 上面代码中的,event.keyCode就可以帮助我们获取到我们按下了什么按键,他返回的是ascII码,比如说上下左右键,分别是38,40,37,39
+// $(document).keypress(function(e) { 
+      // if (e.ctrlKey && e.which == 13) 
+      // $("form").submit(); 
+ // })
+
 </script>
 
 
